--- a/webs/package.json
+++ b/webs/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.3",
+    "lucide-react": "^0.487.0",
     "pdfjs-dist": "^5.1.91",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.1.3"
