--- a/webs/package.json
+++ b/webs/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.3",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
     "pdfjs-dist": "^5.1.91",
     "postcss": "^8.5.3",
@@ -19,6 +20,7 @@
     "react-markdown": "^10.1.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
