--- a/webs/package.json
+++ b/webs/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.3",
+    "framer-motion": "^12.6.5",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
     "pdfjs-dist": "^5.1.91",
