--- a/render.yaml
+++ b/render.yaml
@@ -73,8 +73,8 @@ services:
     type: web
     env: node
     plan: free
-    buildCommand: cd webs && npm install
-    startCommand: cd webs && npm run dev
+    buildCommand: cd webs && npm install && npm run build
+    startCommand: cd webs && npm install -g serve && serve -s dist
     envVars:
       - key: VITE_API_URL
         value: "https://api-service-ub0y.onrender.com"
